--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,9 +4,8 @@ phases:
   pre_build:
     commands:
       - echo "Installing Packer"
-      - sudo yum install -y yum-utils
-      - sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
-      - sudo yum -y install packer
+      - curl -o packer.zip https://releases.hashicorp.com/packer/1.6.5/packer_1.6.5_linux_amd64.zip && unzip packer.zip
+      - echo "installed Packer."
   build:
     commands:
       - cd ami_build_packer
